don't allow mixed arrays